WSS-633 - Upgrade ErrorProne to support Java 11